# geo-dash

./: .gitignore  CMakeLists.txt
include/ICS/: ICS_2DMatrix.h  ICS_3DMatrix.h  ICS_AnimatedSprite.cpp  ICS_AnimatedSprite.h  ICS_Animation.cpp  ICS_Animation.h  ICS_Button.cpp  ICS_Button.h  ICS_Client.cpp  ICS_Client.h  ICS_Color.cpp  ICS_Color.h  ICS_ColoredText.h  ICS_ConsoleHelper.cpp  ICS_ConsoleHelper.h  ICS_Constants.h  ICS_DebugLog.cpp  ICS_DebugLog.h  ICS_DropdownMenu.cpp  ICS_DropdownMenu.h  ICS_EventListener.h  ICS_Font.cpp  ICS_Font.h  ICS_Game.cpp  ICS_Game.h  ICS_Helpers.cpp  ICS_Helpers.h  ICS_Pair.h  ICS_Renderable.cpp  ICS_Renderable.h  ICS_Resource.cpp  ICS_Resource.h  ICS_Server.cpp  ICS_Server.h  ICS_Slider.cpp  ICS_Slider.h  ICS_Sound.cpp  ICS_Sound.h  ICS_Sprite.cpp  ICS_Sprite.h  (+18 more)
include/SOIL/: SOIL.c  stb_image_aug.c  stbi_DDS_aug_c.h
lib/: freetype.lib
src/: Array.h  Block.cpp  Block.h  Constants.h  GeometryDash.cpp  GeometryDash.h  Level.cpp  Level.h  LevelEnd.cpp  LevelEnd.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Spike.cpp  Spike.h  itos.cpp  itos.h  main.cpp
